Migrated Universe name to an ObjectID